--- a/PlanMart.Net/PlanMart.Tests/PlanMart.Tests.csproj
+++ b/PlanMart.Net/PlanMart.Tests/PlanMart.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{18139AA4-27A7-4BA3-9676-B372EFB38734}</ProjectGuid>
+    <ProjectGuid>{019F446E-9EAB-4CE4-9ED7-E242CDEC7680}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PlanMart</RootNamespace>
-    <AssemblyName>PlanMart</AssemblyName>
+    <RootNamespace>PlanMart.Tests</RootNamespace>
+    <AssemblyName>PlanMart.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=3.0.5813.39031, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,17 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Customer.cs" />
-    <Compile Include="IOrderProcessor.cs" />
-    <Compile Include="LineItem.cs" />
-    <Compile Include="LineItemType.cs" />
-    <Compile Include="Order.cs" />
-    <Compile Include="PaymentMethod.cs" />
-    <Compile Include="PlanMartOrderProcessor.cs" />
-    <Compile Include="Product.cs" />
-    <Compile Include="ProductOrder.cs" />
-    <Compile Include="ProductType.cs" />
+    <Compile Include="PlanMartOrderProcessorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PlanMart\PlanMart.csproj">
+      <Project>{18139AA4-27A7-4BA3-9676-B372EFB38734}</Project>
+      <Name>PlanMart</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
