Stub out the classes for the java version of the project

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ PlanMart.Net/packages/
 PlanMart.Net/PlanMart.Tests/obj/
 PlanMart.Net/PlanMart.Tests/bin/
 PlanMart.Net/PlanMart/bin/
+PlanMart.Net/PlanMart.Processors/obj/
+PlanMart.Net/PlanMart.Processors.Tests/obj/
+PlanMart.Net/PlanMart.Processors.Tests/bin/
+PlanMart.Net/PlanMart.Processors/bin/
+PlanMart.Java/out/
+PlanMart.Java/.idea/
