--- a/PlanMart.Net/PlanMart.Processors/PlanMart.Processors.csproj
+++ b/PlanMart.Net/PlanMart.Processors/PlanMart.Processors.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
+    <Compile Include="DateUtil.cs" />
     <Compile Include="PlanMartOrderProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
